feat: add endpoint to generate token poll
